# wile

./: .gitignore  CLAUDE.md  ISSUES.org  PLAN.md  README.md  SRFI.org  dune-project  wile.opam
.github/workflows/: ci.yml
examples/: aot_hello.scm  custom_primitives.ml  dune  embedding_basics.ml  helpers.scm  profiler-demo.scm
lib/: char_type.ml  char_type.mli  compiler.ml  compiler.mli  completion.ml  completion.mli  dap.ml  dap.mli  datum.ml  datum.mli  debug_server.ml  debug_server.mli  dune  env.ml  env.mli  expander.ml  expander.mli  ext_stubs.c  extension.ml  extension.mli  fasl.ml  fasl.mli  highlight.ml  highlight.mli  history.ml  history.mli  instance.ml  instance.mli  language_server.ml  language_server.mli  library.ml  library.mli  line_editor.ml  line_editor.mli  loc.ml  loc.mli  lsp.ml  lsp.mli  opcode.ml  opcode.mli  (+41 more)
stdlib/: dune
stdlib/srfi/: 1.sld  11.sld  113.sld  117.sld  125.sld  128.sld  132.sld  133.sld  145.sld  156.sld  158.sld  162.sld  175.sld  189.sld  195.sld  2.sld  210.sld  214.sld  219.sld  223.sld  228.sld  234.sld  235.sld  26.sld  28.sld  31.sld  41.sld  48.sld  8.sld
stdlib/srfi/41/: primitive.sld
test/: dune  test_aot.ml  test_c_api.ml  test_c_embed.ml  test_c_embed_impl.c  test_c_embed_stub.c  test_char_type.ml  test_compiler.ml  test_completion.ml  test_dap.ml  test_datum.ml  test_debug_server.ml  test_env.ml  test_expander.ml  test_extension.ml  test_fasl.ml  test_highlight.ml  test_history.ml  test_instance.ml  test_language_server.ml  test_library.ml  test_line_editor.ml  test_loc.ml  test_lsp.ml  test_m6_review.ml  test_opcode.ml  test_package.ml  test_paredit.ml  test_pkg_manager.ml  test_port.ml  test_profile_report.ml  test_profiler.ml  test_reader.ml  test_readtable.ml  test_regexp_engine.ml  test_search_path.ml  test_semver.ml  test_srfi.ml  test_symbol.ml  test_syntax.ml  (+4 more)
tools/: dune  precompile_stdlib.ml
