(install
 (section share)
 (package wile)
 (files
  (srfi/1.sld as wile/stdlib/srfi/1.sld)
  (srfi/2.sld as wile/stdlib/srfi/2.sld)
  (srfi/8.sld as wile/stdlib/srfi/8.sld)
  (srfi/11.sld as wile/stdlib/srfi/11.sld)
  (srfi/16.sld as wile/stdlib/srfi/16.sld)
  (srfi/26.sld as wile/stdlib/srfi/26.sld)
  (srfi/28.sld as wile/stdlib/srfi/28.sld)
  (srfi/31.sld as wile/stdlib/srfi/31.sld)
  (srfi/41.sld as wile/stdlib/srfi/41.sld)
  (srfi/41/primitive.sld as wile/stdlib/srfi/41/primitive.sld)
  (srfi/48.sld as wile/stdlib/srfi/48.sld)
  (srfi/111.sld as wile/stdlib/srfi/111.sld)
  (srfi/113.sld as wile/stdlib/srfi/113.sld)
  (srfi/117.sld as wile/stdlib/srfi/117.sld)
  (srfi/125.sld as wile/stdlib/srfi/125.sld)
  (srfi/128.sld as wile/stdlib/srfi/128.sld)
  (srfi/132.sld as wile/stdlib/srfi/132.sld)
  (srfi/133.sld as wile/stdlib/srfi/133.sld)
  (srfi/145.sld as wile/stdlib/srfi/145.sld)
  (srfi/156.sld as wile/stdlib/srfi/156.sld)
  (srfi/158.sld as wile/stdlib/srfi/158.sld)
  (srfi/162.sld as wile/stdlib/srfi/162.sld)
  (srfi/175.sld as wile/stdlib/srfi/175.sld)
  (srfi/189.sld as wile/stdlib/srfi/189.sld)
  (srfi/195.sld as wile/stdlib/srfi/195.sld)
  (srfi/210.sld as wile/stdlib/srfi/210.sld)
  (srfi/214.sld as wile/stdlib/srfi/214.sld)
  (srfi/219.sld as wile/stdlib/srfi/219.sld)
  (srfi/223.sld as wile/stdlib/srfi/223.sld)
  (srfi/228.sld as wile/stdlib/srfi/228.sld)
  (srfi/234.sld as wile/stdlib/srfi/234.sld)
  (srfi/235.sld as wile/stdlib/srfi/235.sld)))
