(tests
 (names test_char_type test_datum test_readtable test_loc test_syntax test_port test_reader test_symbol test_env test_instance test_opcode test_compiler test_vm test_m6_review test_expander test_library test_fasl test_aot test_terminal test_history test_line_editor test_tokenizer test_highlight test_paredit test_semver test_package test_pkg_manager test_srfi)
 (libraries wile alcotest qcheck-core qcheck-alcotest))
